fix(list): apply ripple only once and fix list-inner alignment for multi-line lists.
- Currently the list applied two ripples to list items with a `ng-click` / `proxy element`.
- The actual list-item content wasn't aligned correctly when using a multi-line list.

Fixes #7059

Closes #7060

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -58,13 +58,18 @@ md-list-item {
       border: medium none;
 
       > .md-button:first-child {
-        height: 100%;
         position: absolute;
+        top: 0;
+        left: 0;
+
         margin: 0;
         padding: 0;
+        height: 100%;
       }
 
       .md-list-item-inner {
+        width: 100%;
+        height: 100%;
         padding: 0 16px;
       }
 
